@@ -1,6 +1,7 @@
 Revision history for Perl module Dist-Zilla-PluginBundle-DOHERTY
 
 {{$NEXT}}
+    * Handle the case where it is a fake release
 
 0.008     2011-01-18
     * Fixed spurious warning
